--- a/src/test/resources/whutil.css
+++ b/src/test/resources/whutil.css
@@ -1,7 +1,7 @@
 html		{ background: #DDD; }
-		
-body		{ 
-    background: #fff; 
+
+body		{
+    background: #fff;
     color: black;
     font: 100% "Gentium", "Lucida Grande", "Arial Unicode MS", sans-serif;
     width: 80%;
@@ -13,11 +13,14 @@ body		{
 }
 
 .bold {
-    font-weight : bold;
+    font-weight : bolder;
+    font-variant: small-caps;
+    color: blue;
+
 }
 
 .sperrtext {
-    letter-spacing : 0.2em;
+    letter-spacing : 0.4em;
 }
 
 .italic {
@@ -33,6 +36,8 @@ body		{
 }
 
 div.entry {
+    border-bottom: solid silver 1px;
+    margin-bottom: 4em;
 }
 
 div.content {
@@ -43,4 +48,9 @@ div.attribution {
     float : right;
     width : 15%;
     padding-left : 1em;
+}
+
+div div.entry {
+  margin-below: 4em;
+  margin-left: 2em;
 }
